# ContextGraph

./: .gitignore  AGENTS.md  ASSUMPTIONS.md  AUDIT_REPORT.md  CHANGELOG.md  CONSTITUTION.md  DECISIONS.md  MANIFEST.sha256  Makefile  PROGRESS.md  QUESTIONS_FOR_USER.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260207_000001_init.py  20260208_000002_add_operational_indexes.py
backend/ocg/: __init__.py  cli.py  main.py
backend/ocg/api/: deps.py  routes_admin.py  routes_analytics.py  routes_health.py  routes_personal.py  routes_suggest.py
backend/ocg/connectors/: base.py  github.py  jira.py  registry.py  slack.py
backend/ocg/core/: observability.py  security.py  settings.py
backend/ocg/db/: models.py  session.py
backend/ocg/services/: aggregation.py  analytics.py  common.py  identity.py  ingest.py  kg.py  permissions.py  personal.py  reliability.py
backend/ocg/workers/: __init__.py  jobs.py  queues.py  runtime.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_auth.py  test_end_to_end_pipeline.py  test_migrations.py
backend/tests/unit/: test_connectors.py  test_k_anonymity.py  test_permission_and_determinism.py  test_raw_content_off.py  test_reliability.py  test_security_startup.py  test_worker_runtime.py
checks/: CHECKS_INDEX.md
frontend/: Dockerfile  package-lock.json  package.json
scripts/: check.sh  dependency_lint.py  docs_guard.sh  format_check.sh  frontend_check.sh  lint.sh  migration_check.sh  openapi_check.sh  openapi_export.py  (+4 more)
(+29 files in other folders)
